# django-github-actions

./: .dockerignore  .flake8  .gitignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: docker_build.yaml  lint.yaml  tests.yaml
app/: apis.py  models.py  test_apis.py
app/migrations/: 0001_initial.py
github_actions/: asgi.py  settings.py  urls.py  wsgi.py
